# cldf2lift

./: README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
src/cldf2lift/: __init__.py  __main__.py
src/cldf2lift/bench/: lift.py
tests/: test_isocodes.py  test_lift_generation.py
tests/test_bench/: cldfbench_test_bench.py  lift-export.lift  metadata.json  setup.py
tests/test_bench/cldf/: entries.csv  examples.csv  senses.csv
tests/test_data/: Dictionary-metadata.json  entries.csv  examples.csv  lift-export.lift  senses.csv
